--- a/package.json
+++ b/package.json
@@ -13,5 +13,10 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "yarn": "^1.22.22"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.49",
+    "tailwindcss": "^3.4.17"
   }
 }
